--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,7 +21,7 @@
 
       <ion-item>
         <ion-label floating>Username</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" [(ngModel)]="account.username"></ion-input>
       </ion-item>
       -->
 
@@ -31,7 +31,7 @@
       </ion-item>
 
       <div padding>
-        <button ion-button color="primary" block>Sign in</button>
+        <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
       </div>
 
     </ion-list>
