--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the Welcome page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>welcome</ion-title>
+    <ion-title>{{ 'WELCOME_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
