--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the ListMaster page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>list-master</ion-title>
+    <ion-title>{{ 'LIST_MASTER' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      <ion-avatar item-left>
+        <img [src]="item.avatar" />
+      </ion-avatar>
+      <h2>{{item.title}}</h2>
+      <p>{{item.description}}</p>
+      <ion-note item-right *ngIf="item.note">{{item.note}}</ion-note>
+    </ion-item>
+  </ion-list>
 </ion-content>
