--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'LIST_MASTER' | translate }}</ion-title>
+    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
