--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -12,10 +12,10 @@
   <ion-list>
     <ion-item *ngFor="let item of items">
       <ion-avatar item-left>
-        <img [src]="item.avatar" />
+        <img [src]="item.profilePic" />
       </ion-avatar>
-      <h2>{{item.title}}</h2>
-      <p>{{item.description}}</p>
+      <h2>{{item.name}}</h2>
+      <p>{{item.about}}</p>
       <ion-note item-right *ngIf="item.note">{{item.note}}</ion-note>
     </ion-item>
   </ion-list>
