--- a/src/pages/list-detail/list-detail.html
+++ b/src/pages/list-detail/list-detail.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the ListDetail page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>list-detail</ion-title>
+    <ion-title>{{ item.name }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <div class="item-detail">
+    <div text-center>
+      <img [src]="item.profilePic" [alt]="item.name"><br>
+
+      <button ion-button icon-only clear small color="twitter">
+        <ion-icon name="logo-twitter"></ion-icon>
+      </button>
+      <button ion-button icon-only clear small color="github">
+        <ion-icon name="logo-github"></ion-icon>
+      </button>
+      <button ion-button icon-only clear small color="instagram">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </button>
+    </div>
+
+    <p>{{item.about}}</p>
+  </div>
 
 </ion-content>
