--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <ion-list>
-    <ion-item *ngFor="let item of items">
+    <ion-item *ngFor="let item of items" (click)="openItem(item)">
       <ion-avatar item-left>
         <img [src]="item.profilePic" />
       </ion-avatar>
