--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -8,11 +8,26 @@
         <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
+    <ion-buttons end>
+      <button ion-button (click)="done()" [attr.disabled]="isReadyToSave ? null : true">
+        <span color="primary" showWhen="ios">Done</span>
+        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-
+  <form [formGroup]="form" (ngSubmit)="createItem()">
+    <ion-list>
+      <ion-item>
+        <ion-input type="text" placeholder="Name" formControlName="name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="text" placeholder="About" formControlName="about"></ion-input>
+      </ion-item>
+    </ion-list>
+  </form>
 </ion-content>
