--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -27,7 +27,7 @@
       </button>
 
       <ion-item-options>
-        <button ion-button color="danger" (click)="remove(item)">
+        <button ion-button color="danger" (click)="deleteItem(item)">
           Delete
         </button>
       </ion-item-options>
