--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -3,15 +3,15 @@
   <ion-navbar>
     <ion-title>{{ 'ITEM_CREATE_TITLE' | translate }}</ion-title>
     <ion-buttons start>
-      <button ion-button (click)="dismiss()">
+      <button ion-button (click)="cancel()">
         <span color="primary" showWhen="ios">Cancel</span>
         <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
     <ion-buttons end>
-      <button ion-button (click)="done()" [attr.disabled]="isReadyToSave ? null : true">
+      <button ion-button (click)="done()" [disabled]="!isReadyToSave">
         <span color="primary" showWhen="ios">Done</span>
-        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+        <ion-icon name="md-checkmark" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
