--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -21,6 +21,10 @@
 
 <ion-content>
   <form [formGroup]="form" (ngSubmit)="createItem()">
+    <div class="profile-image-wrapper" (click)="getPicture()">
+      <div class="profile-image-placeholder" *ngIf="!this.form.controls.profilePic.value"><ion-icon name="add"></ion-icon></div>
+      <div class="profile-image" [style.backgroundImage]="getProfileImageStyle()" *ngIf="this.form.controls.profilePic.value"></div>
+    </div>
     <ion-list>
       <ion-item>
         <ion-input type="text" placeholder="Name" formControlName="name"></ion-input>
