--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -11,7 +11,7 @@
     <ion-buttons end>
       <button ion-button (click)="done()" [disabled]="!isReadyToSave">
         <span color="primary" showWhen="ios">Done</span>
-        <ion-icon name="md-checkmark" showWhen="android,windows"></ion-icon>
+        <ion-icon name="md-checkmark" showWhen="core,android,windows"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
