--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -9,7 +9,7 @@
       </button>
     </ion-buttons>
     <ion-buttons end>
-      <button ion-button (click)="done()" [disabled]="!isReadyToSave">
+      <button ion-button (click)="done()" [disabled]="!isReadyToSave" strong>
         <span color="primary" showWhen="ios">Done</span>
         <ion-icon name="md-checkmark" showWhen="core,android,windows"></ion-icon>
       </button>
