--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,25 +14,27 @@
 
 <ion-content>
 
-  <ion-list *ngIf="settingsReady">
-    <ion-item>
-      <ion-label>{{ 'SETTINGS_OPTION1' | translate }}</ion-label>
-      <ion-toggle [(ngModel)]="options.option1"></ion-toggle>
-    </ion-item>
+  <form [formGroup]="form">
+    <ion-list *ngIf="settingsReady">
+      <ion-item>
+        <ion-label>{{ 'SETTINGS_OPTION1' | translate }}</ion-label>
+        <ion-toggle formControlName="option1"></ion-toggle>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>{{ 'SETTINGS_OPTION2' | translate }}</ion-label>
-      <ion-input [(ngModel)]="options.option2"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>{{ 'SETTINGS_OPTION2' | translate }}</ion-label>
+        <ion-input formControlName="option2"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>{{ 'SETTINGS_OPTION3' | translate }}</ion-label>
-      <ion-select [(ngModel)]="options.option3">
-        <ion-option value="1" checked="true">1</ion-option>
-        <ion-option value="2">2</ion-option>
-        <ion-option value="3">3</ion-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+      <ion-item>
+        <ion-label>{{ 'SETTINGS_OPTION3' | translate }}</ion-label>
+        <ion-select formControlName="option3">
+          <ion-option value="1" checked="true">1</ion-option>
+          <ion-option value="2">2</ion-option>
+          <ion-option value="3">3</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+  </form>
 
 </ion-content>
