--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,15 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'SETTINGS_TITLE' | translate }}</ion-title>
+    <ion-title>{{ pageTitle }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content>
 
-  <form [formGroup]="form">
-    <ion-list *ngIf="settingsReady">
+  <form [formGroup]="form" *ngIf="settingsReady">
+    <ion-list *ngIf="page == 'main'">
       <ion-item>
         <ion-label>{{ 'SETTINGS_OPTION1' | translate }}</ion-label>
         <ion-toggle formControlName="option1"></ion-toggle>
@@ -33,6 +33,17 @@
           <ion-option value="2">2</ion-option>
           <ion-option value="3">3</ion-option>
         </ion-select>
+      </ion-item>
+
+      <button ion-item [navPush]="subSettings" [navParams]="profileSettings">
+        Edit Profile
+      </button>
+    </ion-list>
+
+    <ion-list *ngIf="page == 'profile'">
+      <ion-item>
+        <ion-label>{{ 'SETTINGS_OPTION4' | translate }}</ion-label>
+        <ion-input formControlName="option4"></ion-input>
       </ion-item>
     </ion-list>
   </form>
