--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -15,8 +15,7 @@
 <ion-content>
 
   <ion-list>
-    <ion-item-sliding *ngFor="let item of currentItems | async">
-
+    <ion-item-sliding *ngFor="let item of currentItems">
       <button ion-item (click)="openItem(item)">
         <ion-avatar item-left>
           <img [src]="item.profilePic" />
