--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,11 +1,15 @@
 <ion-content scroll="false">
-  <div class="content">
-    <div class="center-content">
-      <h1 class="cta">{{ 'WELCOME' | translate }}</h1>
-      <p>
-        <button ion-button block (click)="login()" class="login">{{ 'LOGIN' | translate }}</button>
-        <button ion-button block (click)="signup()" class="signup">{{ 'SIGNUP' | translate }}</button>
-      </p>
+  <div class="splash-bg"></div>
+  <div class="splash-info">
+    <div class="splash-logo"></div>
+    <div class="splash-intro">
+      The starting point for your
+      <br>
+      next great Ionic app
     </div>
+  </div>
+  <div padding>
+    <button ion-button block (click)="signup()" class="signup">{{ 'SIGNUP' | translate }}</button>
+    <button ion-button block (click)="login()" class="login">{{ 'LOGIN' | translate }}</button>
   </div>
 </ion-content>
