--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -7,14 +7,76 @@
 </ion-header>
 
 
-<ion-content padding>
-
-  <div class="item-detail">
-    <div text-center>
-      <img [src]="item.profilePic" [alt]="item.name"><br>
-    </div>
-
-    <p>{{item.about}}</p>
+<ion-content fullscreen (ionScroll)="onScroll($event)">
+  <div class="item-profile" text-center #profilePic [style.background-image]="'url(' + item.profilePic + ')'">
   </div>
 
+  <div class="item-detail" padding>
+    <h2>{{item.name}}</h2>
+    <p>{{item.about}}</p>
+
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+    <p>
+      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
+    </p>
+  </div>
 </ion-content>
