--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -7,76 +7,12 @@
 </ion-header>
 
 
-<ion-content fullscreen (ionScroll)="onScroll($event)">
+<ion-content>
   <div class="item-profile" text-center #profilePic [style.background-image]="'url(' + item.profilePic + ')'">
   </div>
 
   <div class="item-detail" padding>
     <h2>{{item.name}}</h2>
     <p>{{item.about}}</p>
-
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
-    <p>
-      oiasdfjasdoifjaoisdfjaoisdjfioasdjf
-    </p>
   </div>
 </ion-content>
